dnl Copyright (C) 2004-2005 Glenn ROLLAND.
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software 
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
dnl 

## Autoconf requirements
AC_INIT([alobe], [0.0.2], [glenux@glenux.net])
AC_PREREQ(2.50)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET


AM_INIT_AUTOMAKE([alobe],[0.0.2])

#AC_CANONICAL_SYSTEM



AM_CONFIG_HEADER(config.h)
AC_CONFIG_SRCDIR([src/alobe.h])
AC_PROG_INSTALL

## information on the package
## ## checks for programs
## checks for libraries
## checks for header files
## checks for types
## checks for structures
## checks for compiler characteristics
## checks for library functions
## checks for system services

#AM_CONFIG_HEADER(config.h)
## required for c sources

AC_ISC_POSIX
AC_PROG_CC
## required for c++ sources
AC_PROG_CXX
AC_PROG_CPP

AC_LANG_SAVE
AC_LANG_CPLUSPLUS

# AC_PROG_YACC
# AC_PROG_LEX
# AM_PROG_LEX
 
dnl Checks for library functions.
AC_HEADER_STDC([])

dnl Check for programs

dnl Check for build configuration.
#AC_PROG_INTLTOOL

AM_PROG_LIBTOOL

dnl Checks for header files.

AC_CONFIG_FILES([
	Makefile 
	src/Makefile 
	])
AC_OUTPUT

dnl configure.in ends here
